--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
     <groupId>sqlexec</groupId>
     <artifactId>sqlexec</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>SQL :: Exec :: Command line utility</name>
     <packaging>jar</packaging>
+    
+    <dependencies>
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.oracle</groupId>
+            <artifactId>orai18n</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
